outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-21_23-21-44/evaluations/problem_eval-6105782771701018401_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance in future steps, using a combination of average distances to unvisited nodes and node degree.}
                                                                                                            ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance in future steps, using a combination of average distances to unvisited nodes and node degree.}
                                                                                                            ^
SyntaxError: unmatched '}'
